feat: Enhanced persistence mechanism and caching strategy for player and entity data management.
- Refactored LegacyEntityDataService and LegacyPlayerDataService to support custom TTL settings
- Implemented TTL management for EntityDataPersistenceTask and PlayerDataPersistenceTask
- Improved data preservation logic to ensure correct TTL setting in L2 cache
- Enhanced documentation